--- a/.github/workflows/show-code.yml
+++ b/.github/workflows/show-code.yml
@@ -5,7 +5,6 @@ on: [push]
 jobs:
   list-files:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -18,4 +17,4 @@ jobs:
       - name: Show README
         run: |
           echo "📄 README.md content:"
-          cat README
+          cat README.md
